  message in $im->errstr
- added typemap type names to types in Imager::API.
- make skip when Inline::C not available less verbose
- convert t/t07iolayer.t to Test::More
- handle the possibility of strerror() returning NULL.
- supply C<imager> parameter to filters so we can register filters
  implemented in perl.
- document register_filter() and add test for it
- add example to SYNOPSIS of samples/inline_replace_color.pl
- minor POD fix in Imager::Color::Table
- eliminate many -Wall warnings
- update README to match unbuggy giflib
- document index parameter of Imager::Font->new()
- change faxable output to use a more fax natural PHOTOMETRIC_MINISWHITE, 
  since T.4 normally works that way, and MINISBLACK confuses some readers.
- clean up scale() method for readability
- make scale() fail if an invalid type is supplied (previously
  documented as undefined behaviour)
- add error handling tests for scale()
- smarter warning removal
- handle effects of byte ordering when testing tiff error messages
- scale() can now expect an Image::Math::Constrain object as a scaling
  constraint via the constrain parameter.
- added tests for the various ways we can specify scaling size
- documented scale()'s scalefactor parameter
- sick of $opts{scalefactor} in scale(), give it a scalar to call it's
  own.
- check $Config{ldflags} and $Config{ccflags} for places to search for
  headers and libraries.  This deals with the way the fink build of perl
  puts -L/sw/lib in ldflags rather than using loclibpth
- eliminate some of the duplication of -I and -L options in LIBS and INC
- Makefile.PL now uses strict.
- the search for freetype1.x headers is now smarter
- add tests for scaleX()/scaleY()
- expand documentation of scaleX()/scaleY()

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
